test/files/neg/hidden-complexity.scala
trait Foo[F[_]]
object Foo {
  implicit def mkFoo[F[_]](implicit ff: Foo[({ type 位[t] = F[F[t]] })#位]): Foo[F] = ???
}

trait Bar[F[_]]
object Bar {
  implicit def mkBar[F[_]](implicit bb: Bar[位 forSome { type 位[t] <: F[t] }]): Bar[F] = ???
}

object Test {
  implicitly[Foo[List]]
  implicitly[Bar[List]]
}
